# spark_helper

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  sample_cluster_config.yaml  sample_local_config.yaml  spark_demo.ipynb
.github/: copilot-instructions.md
docs/: getting_started.md  index.md  modules.md
src/spark_helper/: __init__.py  core.py  generate_config.py  spark_config_cluster_template.yaml  spark_config_local_template.yaml  spark_config_template.yaml
tests/: test_core.py
